# kedro-plugins

./: .coverage  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Enhancing Kedro Documentation: Running SQL Queries with Ibis  Makefile  README.md  coverage.xml  env.py  merge_pr_gatekeeper.yml  trufflehog-ignore.txt
kedro-airflow/: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  RELEASE.md  pyproject.toml  requirements.txt  setup.py  test_requirements.txt
kedro-airflow/features/: airflow.feature  environment.py
kedro-airflow/features/steps/: cli_steps.py  sh_run.py  util.py
kedro-airflow/kedro_airflow/: __init__.py  airflow_dag_template.j2  grouping.py  plugin.py
kedro-airflow/tests/: conftest.py  test_node_grouping.py  test_plugin.py
kedro-datasets/: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE.md  asv.conf.json  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.pkl  test.py  test.xlsx  test_requirements.txt
kedro-datasets/docs/: index.md  readme.md
kedro-datasets/docs/javascript/: code-select.js  deindex-old-docs.js  source-links.js
kedro-datasets/docs/overrides/: welcome.html
kedro-datasets/docs/source/: conf.py  index.md  index.rst  kedro_datasets.rst
kedro-datasets/docs/stylesheets/: code-select.css  globals.css  source-buttons.css  welcome.css
kedro-datasets/experimental/: README.md
kedro-datasets/features/steps/: dummy.feature
kedro-datasets/kedro/datasets/: README.md  __init__.py
kedro-datasets/kedro_benchmarks/: benchmark_partitioned_dataset.py
kedro-datasets/kedro_datasets/: README.md  __init__.py  _io.py  _typing.py  conftest.py  constants.py
kedro-datasets/kedro_datasets/_utils/: __init__.py  abstract_openai_dataset.py  connection_mixin.py  databricks_utils.py  file_utils.py  security.py  spark_utils.py
kedro-datasets/kedro_datasets/api/: __init__.py  api_dataset.py
kedro-datasets/kedro_datasets/biosequence/: __init__.py  biosequence_dataset.py
kedro-datasets/kedro_datasets/dask/: __init__.py  csv_dataset.py  parquet_dataset.py
kedro-datasets/kedro_datasets/databricks/: __init__.py  _base_table_dataset.py  base_table_dataset.py  external_table_dataset.py  managed_table_dataset.py  unity.py
kedro-datasets/kedro_datasets/datasets/: README.md  __init__.py
kedro-datasets/kedro_datasets/docx/: docx_dataset.py
kedro-datasets/kedro_datasets/dremio/: README.md  __init__.py  flight_dataset.py
kedro-datasets/kedro_datasets/email/: __init__.py  message_dataset.py
kedro-datasets/kedro_datasets/feast/: __init__.py  feast_dataset.py
kedro-datasets/kedro_datasets/geopandas/: README.md  __init__.py  generic_dataset.py  geojson_dataset.py  parquet_dataset.py
kedro-datasets/kedro_datasets/geotiff/: geotiff_dataset.py
kedro-datasets/kedro_datasets/holoviews/: __init__.py  holoviews_writer.py
kedro-datasets/kedro_datasets/huggingface/: __init__.py  _base.py  arrow_dataset.py  csv_dataset.py  hdf5_dataset.py  hugging_face_dataset.py  json_dataset.py  lance_dataset.py  parquet_dataset.py  transformer.py  transformer_pipeline_dataset.py
kedro-datasets/kedro_datasets/ibis/: __init__.py  file_dataset.py  table_dataset.py
kedro-datasets/kedro_datasets/influx/: __init__.py  influx_dataset.py
kedro-datasets/kedro_datasets/io/: __init__.py  core.py
kedro-datasets/kedro_datasets/json/: __init__.py  json_dataset.py
kedro-datasets/kedro_datasets/langchain/: __init__.py  _anthropic.py  _cohere.py  _openai.py  anthropic.py  base.py  chat_anthropic_dataset.py  chat_cohere_dataset.py  chat_openai_dataset.py  cohere.py  openai.py  openai_embeddings_dataset.py
kedro-datasets/kedro_datasets/matlab/: __init__.py  matlab_dataset.py
kedro-datasets/kedro_datasets/matplotlib/: __init__.py  matplotlib_dataset.py  matplotlib_writer.py
kedro-datasets/kedro_datasets/neo4j/: __init__.py  neo4j_dataset.py
kedro-datasets/kedro_datasets/netcdf/: __init__.py  netcdf_dataset.py
kedro-datasets/kedro_datasets/networkx/: __init__.py  gml_dataset.py  graphml_dataset.py  json_dataset.py
kedro-datasets/kedro_datasets/openxml/: __init__.py  docx_dataset.py  pptx_dataset.py
kedro-datasets/kedro_datasets/optuna/: __init__.py  study_dataset.py
kedro-datasets/kedro_datasets/pandas/: __init__.py  csv_dataset.py  deltatable_dataset.py  excel_dataset.py  feather_dataset.py  gbq_dataset.py  generic_dataset.py  hdf_dataset.py  json_dataset.py  parquet_dataset.py  sql_dataset.py  xml_dataset.py
kedro-datasets/kedro_datasets/partitions/: __init__.py  incremental_dataset.py  partitioned_dataset.py
kedro-datasets/kedro_datasets/pickle/: __init__.py  pickle_dataset.py
kedro-datasets/kedro_datasets/pillow/: __init__.py  image_dataset.py
kedro-datasets/kedro_datasets/plotly/: __init__.py  html_dataset.py  json_dataset.py  plotly_dataset.py
kedro-datasets/kedro_datasets_benchmarks/: README.md  __init__.py  benchmark_partitioned_dataset.py
kedro-datasets/kedro_datasets_experimental/: README.md
kedro-datasets/tests/: conftest.py  test_io.py
kedro-docker/: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  RELEASE.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_requirements.txt
kedro-docker/features/: docker.feature  docker_with_spark.feature  environment.py
kedro-docker/kedro_docker/: __init__.py  helpers.py  plugin.py
kedro-docker/project_dummy/: Dockerfile
kedro-docker/tests/: test_helpers.py
kedro-telemetry/: .flake8  .pre-commit-config.yaml  Makefile  README.md  RELEASE.md  pyproject.toml  requirements.txt  setup.py  test_requirements.txt
kedro-telemetry/.circleci/: config.yml
kedro-telemetry/kedro_telemetry/: __init__.py  masking.py  plugin.py
kedro-telemetry/tests/: test_masking.py  test_plugin.py
kedro-validator/: .gitignore  README.md  RELEASE.md  pyproject.toml
kedro-validator/kedro_validator/: __init__.py  plugin.py
(+594 files in other folders)
