[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "kedro-airflow"
authors = [
    {name = "Kedro"}
]
description = "Kedro-Airflow makes it easy to deploy Kedro projects to Airflow"
requires-python = ">=3.8"
license = {text = "Apache Software License (Apache 2.0)"}
dependencies = [
    "kedro>=0.19.0",
    "python-slugify>=4.0",
    "semver>=2.10",  # Needs to be at least 2.10.0 to make use of `VersionInfo.match`.
]
dynamic = ["readme", "version"]

[project.urls]
Source = "https://github.com/kedro-org/kedro-plugins/tree/main/kedro-airflow"
Documentation = "https://github.com/kedro-org/kedro-plugins/blob/main/kedro-airflow/README.md"
Tracker = "https://github.com/kedro-org/kedro-plugins/issues"

[project.optional-dependencies]
test = [
    "apache-airflow<3.0",
    "bandit",
    "behave",
    "black~=22.0",
    "connexion<3.0.0", # TODO: Temporary fix, connexion has changed their API, but airflow hasn't caught up yet
    "Flask-Session<0.6", # TODO: Temporary pin, 0.6 breaks apache-airflow
    "kedro-datasets",
    "pre-commit>=2.9.2",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "trufflehog>=2.1.0, <3.0",
    "ruff~=0.0.290",
    "wheel"
]

[project.entry-points."kedro.project_commands"]
airflow = "kedro_airflow.plugin:commands"

[tool.setuptools]
include-package-data = true
packages = ["kedro_airflow"]
zip-safe = false

[tool.setuptools.package-data]
kedro_airflow = ["kedro_airflow/airflow_dag_template.j2"]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}
version = {attr = "kedro_airflow.__version__"}

[tool.pytest.ini_options]
addopts = """
    --cov-report xml:coverage.xml
    --cov-report term-missing
    --cov kedro_airflow
    --cov tests
    --no-cov-on-fail
    -ra"""

[tool.black]
exclude=".*template.py"

[tool.coverage.report]
fail_under = 100
show_missing = true
omit = ["tests/*"]
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff]
line-length = 88
show-fixes = true
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]
ignore = ["E501"]  # Black takes care of line-too-long

[tool.ruff.per-file-ignores]
"{tests,features}/*" = ["T201", "PLR2004", "PLR0915", "PLW1510"]
