[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kedro-telemetry"
authors = [
    {name = "Kedro"}
]
description = "Kedro-Telemetry"
requires-python = ">=3.7, <3.11"
license = {text = "Apache Software License (Apache 2.0)"}
dependencies = [
    "kedro~=0.18.0",
    "requests~=2.20",
]
dynamic = ["readme", "version"]

[project.urls]
Source = "https://github.com/kedro-org/kedro-plugins/tree/main/kedro-telemetry"
Documentation = "https://github.com/kedro-org/kedro-plugins/blob/main/kedro-telemetry/README.md"
Tracker = "https://github.com/kedro-org/kedro-plugins/issues"

[project.entry-points."kedro.cli_hooks"]
kedro-telemetry = "kedro_telemetry.plugin:cli_hooks"

[project.entry-points."kedro.hooks"]
kedro-telemetry = "kedro_telemetry.plugin:project_hooks"

[tool.setuptools]
include-package-data = true
packages = ["kedro_telemetry"]
zip-safe = false

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}
version = {attr = "kedro_telemetry.__version__"}

[tool.isort]
profile = "black"
known_first_party = "kedro_telemetry"
