[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kedro-telemetry"
authors = [
    {name = "Kedro"}
]
description = "Kedro-Telemetry"
requires-python = ">=3.7"
license = {text = "Apache Software License (Apache 2.0)"}
dependencies = [
    "kedro~=0.18.0",
    "requests~=2.20",
]
dynamic = ["readme", "version"]

[project.urls]
Source = "https://github.com/kedro-org/kedro-plugins/tree/main/kedro-telemetry"
Documentation = "https://github.com/kedro-org/kedro-plugins/blob/main/kedro-telemetry/README.md"
Tracker = "https://github.com/kedro-org/kedro-plugins/issues"

[project.optional-dependencies]
test = [
    "bandit>=1.6.2, <2.0",
    "behave",
    "black~=22.0",
    "flake8",
    "isort>=4.3.21, <5.0",
    "pre-commit>=1.17.0, <2.0",
    "pylint>=2.5.2, <3.0",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist[psutil]~=2.2.1",
    "trufflehog>=2.1.0, <3.0",
    "wheel"
]

[project.entry-points."kedro.cli_hooks"]
kedro-telemetry = "kedro_telemetry.plugin:cli_hooks"

[project.entry-points."kedro.hooks"]
kedro-telemetry = "kedro_telemetry.plugin:project_hooks"

[tool.setuptools]
include-package-data = true
packages = ["kedro_telemetry"]
zip-safe = false

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}
version = {attr = "kedro_telemetry.__version__"}

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_first_party = "kedro_telemetry"

[tool.ruff]
line-length = 88
show-fixes = true
# select = ["A", "B", "C", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
select = [
    "F",  # Pyflakes
    "E",  # Pycodestyle
    "W",  # Pycodestyle
    "UP",  # pyupgrade
    "I",  # isort
    "PL", # Pylint
]
ignore = ["E501"]  # Black take care off line-too-long
unfixable = []